<resources>

    <!-- App -->
    <string name="app_name">GOGRESS</string>
    <string name="app_description">SAPO - Android</string>
    <string name="app_version">version: 1.0</string>
    <string name="app_use">Distribuir solo entre agentes iluminados</string>


    <!-- Menu -->
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="action_revoke_access">Revoke Access</string>


    <string name="title_activity_login">Login</string>
    <string name="log_out">Salir</string>


    <!-- System message -->
    <string name="logged_in">Logged in</string>
    <string name="logged_out">Logged out</string>
    <string name="network_error">NETWORK ERROR DETECTED</string>
    <string name="progress_dialog">Connecting</string>
    <string name="getting_profile_information_error">Error detected while trying to get profile information</string>
    <string name="welcome_user">Welcome Agent</string>


    <!-- UI almost dummy text-->
    <string name="button_text_revoke_access">Revoke Access</string>
    <string name="button_text_refresh_data">Refresh data</string>
    <string name="dummy_text_user_name">Agent: User Name</string>
    <string name="dummy_text_email">Email: username@gmail.com</string>
    <string name="text_view_data">One morning,
        when Gregor Samsa woke from troubled dreams,
        he found himself transformed in his bed into a horrible vermin.
        He lay on his armour-like back, and if he lifted his head a little he could see his brown belly,
        slightly domed and divided by arches into stiff sections.
        The bedding was hardly able to cover it and seemed ready to slide off any moment.
        His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked.
    </string>

    <!-- debug mode -->
    <string name="login_debug_mode">DEBUG MODE LOGIN</string>


</resources>
