<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        android:icon="@android:drawable/stat_notify_sync"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="101"
        app:showAsAction="never" />

    <item android:id="@+id/action_revoke_access"
        android:title="@string/action_revoke_access"
        android:orderInCategory="102"
        app:showAsAction="never" />

</menu>
