<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/black_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textViewAppDescription"
            android:text="@string/app_description"
            android:textColor="@color/text_color_green_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp" />

        <TextView
            android:id="@+id/textViewAppVersion"
            android:text="@string/app_version"
            android:textColor="@color/text_color_green_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp" />

        <TextView
            android:id="@+id/textViewAppUse"
            android:text="@string/app_use"
            android:lines="2"
            android:maxLines="3"
            android:textColor="@color/text_color_green_1"
            android:layout_width="164dp"
            android:layout_height="89dp"
            android:singleLine="false"
            android:layout_gravity="left|top"
            android:layout_margin="6dp" />

    </LinearLayout>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/imageViewGIF"
        android:src="@drawable/jarvis_virus"
        android:layout_width="@dimen/logoapp_imageview_width"
        android:layout_height="@dimen/logoapp_imageview_height"

        android:layout_gravity="right"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="6dp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
